<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:background="#ffc65d"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay" >
    <RelativeLayout 
    android:id="@+id/rel_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc65d"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_marginTop="5dp"
       android:focusable="false"
       android:focusableInTouchMode="false"
       android:text="@string/Recording"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:textColor="#000000"
       android:textSize="14sp" />

    <Button
       android:id="@+id/button1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/imageView1"
       android:background="#ffffff"
       android:layout_marginTop="20dp"
       android:onClick="start"
       android:text="@string/start" />
   
   <Button
      android:id="@+id/button2"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button1"
      android:background="#ffffff"
      android:layout_marginTop="1dp"
      android:onClick="stop"
      android:text="@string/stop" />

   <Button
       android:id="@+id/button3"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button2"
       android:layout_marginTop="1dp"
       android:background="#ffffff"
       android:onClick="play"
       android:text="@string/play" />
   
   <Button
       android:id="@+id/button4"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button3"
       android:layout_marginTop="1dp"
       android:background="#ffffff"
       android:onClick="sendMessage"
       android:text="@string/view" />

   <ImageView
       android:id="@+id/imageView1"
       android:layout_width="fill_parent"
       android:layout_height="160dp"
       android:layout_marginTop="20dp"
       android:contentDescription="@string/view"
       android:layout_below="@+id/textView1"
        android:onClick="start"
        android:gravity="center"
       />
<android.support.v4.view.ViewPager
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
<com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5578845458712640/1814013638" />
</RelativeLayout>
</ScrollView>