<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:background="#ffc65d"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay" >

    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffc65d"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ideabook.PlayActivity" 
    >
 
    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
       android:layout_marginTop="5dp"
       android:textColor="#000000"
        android:textSize="14sp"
        android:text="@string/PlayAll" 
        android:focusableInTouchMode="false" 
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:focusable="false"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="380dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="6dp"
        android:background="#f6f6f6"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:longClickable="true" >

    </ListView>
   
	<Button
	    android:id="@+id/button5"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@android:id/list"
	    android:layout_toLeftOf="@+id/view"
	    android:background="#a8cfd5"
	    android:layout_toStartOf="@+id/view"
	    android:layout_marginTop="3dp"
	    android:onClick="stop"
	    android:text="@string/stop1" />
	<View 
            android:id="@+id/view"
            android:layout_height="1dp"
            android:layout_width="1dp"
            android:layout_centerHorizontal="true"
            />

	  <Button
	      android:id="@+id/button6"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:layout_alignBaseline="@+id/button5"
	      android:layout_alignBottom="@+id/button5"
	      android:layout_alignParentEnd="true"
	      android:layout_alignParentRight="true"
	      android:layout_toEndOf="@+id/view"
	      android:layout_toRightOf="@+id/view"
	      android:background="#a8cfd5"
	      android:text="@string/spread" />
	  
	   <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_marginTop="3dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5578845458712640/1814013638" />
	  
</RelativeLayout>
</ScrollView>

    
